--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -54,6 +54,19 @@
     </div>
   </section>
 
+  <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
+        <div class="flex items-center gap-3 mb-2">
+          <img src="../images/els.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
+          <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
+        </div>
+        <p class="text-xs text-gray-300">
+          <b>Items Bought:</b>
+          <br>All loot items
+          <br>Price: Low fixed rate (e.g. Cracked Shield = 13g, Gold Doubloon = 50g)
+        </p>
+      </div>
+</div>
+
   <!-- Footer -->
   <footer class="text-center py-6 text-sm text-gray-400">
     © Fuumi Galleria
