--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -50,7 +50,7 @@
   <!-- Card Section: Load another HTML file -->
   <section class="flex justify-center p-6">
     <div class="relative w-[800px] aspect-[16/10] bg-[#1e002e] rounded-xl shadow-xl p-6 overflow-hidden">
-      <iframe src="../res/character-grid.html"></iframe>
+      <iframe src="../character-grid.html"></iframe>
     </div>
   </section>
 
