--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Loot Buyer Guide</title>
+  <title>Wondering Wanderers</title>
   <link rel="icon" href="../images/favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -43,8 +43,8 @@
 
   <!-- Intro -->
   <section class="max-w-3xl mx-auto text-center p-6 space-y-3">
-    <p class="uppercase font-bold">This is not a guide on how to loot.</p>
-    <p>This is a direct guide to where you can sell your loot from loot diving.</p>
+    <p class="uppercase font-bold">Wondering Wanderers.</p>
+    <p>Contact me to have your account submitted.</p>
   </section>
 
   <!-- Card Section: Load another HTML file -->
@@ -57,12 +57,11 @@
   <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
           <img src="../images/els.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
-          <h3 class="font-bold text-md">NPC: Elster the Hoarder</h3>
+          <h3 class="font-bold text-md">Fuumi</h3>
         </div>
         <p class="text-xs text-gray-300">
-          <b>Items Bought:</b>
-          <br>All loot items
-          <br>Price: Low fixed rate (e.g. Cracked Shield = 13g, Gold Doubloon = 50g)
+          <b>Graal IGN:</b>
+          <br>Fuumi, Eins, Zwei
         </p>
       </div>
 </div>
