--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -56,7 +56,7 @@
 
   <div class="bg-[#2a0044] p-3 rounded-lg border border-purple-500">
         <div class="flex items-center gap-3 mb-2">
-          <img src="../images/els.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
+          <img src="../images/fuumi.png" alt="NPC Logo" class="w-10 h-10 rounded-full object-cover border border-purple-400" />
           <h3 class="font-bold text-md">Fuumi</h3>
         </div>
         <p class="text-xs text-gray-300">
