--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </div>
     <div class="bg-[#1e002e] p-4 rounded-lg text-center">
       <img src="images/Coin.png" alt="Preview" class="w-25 h-25 object-cover mb-4" />
-      <h2 class="font-bold text-lg">UPLOADS PREVIEWER</h2>
+      <h2 class="font-bold text-lg">GUILD PHOTO</h2>
       <a href="hooks/fifthpage.html" class="mt-2 inline-block bg-yellow-400 text-black font-bold py-1 px-4 rounded hover:bg-yellow-300 transition">VIEW PAGE</a>
-      <p class="mt-2 text-sm">Take a look at your heads and bodies before uploading them.</p>
+      <p class="mt-2 text-sm">Checkout who's currently a member of Wondering Wanderers.</p>
     </div>
 
     
