--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -62,6 +62,9 @@
         <p class="text-xs text-gray-300">
           <b>Graal IGN:</b>
           <br>Fuumi, Eins, Zwei
+          <br>
+          <br><b>Notes:</b>
+          <br>If you are currently using a mobile device, toggle "Desktop site" in your chrome to view more of the photo.
         </p>
       </div>
 </div>
