--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wondering Wanderers</title>
+  <title>GraalOnline Classic Legacy Frame</title>
   <link rel="icon" href="../images/favicon.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -43,7 +43,7 @@
 
   <!-- Intro -->
   <section class="max-w-3xl mx-auto text-center p-6 space-y-3">
-    <p class="uppercase font-bold">Wondering Wanderers.</p>
+    <p class="uppercase font-bold">GraalOnline Classic Legacy Frame.</p>
     <p>Contact me to have your account submitted.</p>
   </section>
 
