--- a/fourthpage.html
+++ b/fourthpage.html
@@ -157,10 +157,11 @@
       </nav>
     </section>
 
-    <footer>© Fuumi Galleria - Gani Previewer</footer>
+    <footer>© Dusty Shouri - https://dustyshouri.github.io</footer>
 
     <script type="text/javascript" src="defaultGanis.js?random=203"></script>
     <script type="text/javascript" src="main.js?random=203"></script>
     
   </body>
 </html>
+
