--- a/hooks/fifthpage.html
+++ b/hooks/fifthpage.html
@@ -61,7 +61,7 @@
         </div>
         <p class="text-xs text-gray-300">
           <b>Graal IGN:</b>
-          <br>KEDU, Zwei, Eins, Fuumi, Stefan Sora, Richard Cheese, Kobe, Tide S*
+          <br>KEDU, Zwei, Eins, Fuumi, Stefan Sora, Richard Cheese, Kobe, Jermakiss
           <br>
           <br><b>Notes:</b>
           <br>If you are currently using a mobile device, toggle "Desktop site" in your chrome to view more of the photo.
